--- a/frontend/main.css
+++ b/frontend/main.css
@@ -14,6 +14,16 @@ body
     margin: 40px;
 }
 
+#joinPasswordBox
+{
+}
+#dialog {
+    width:620px;
+    margin-top: 10px;
+    text-align:center;
+    display:none;
+}
+
 #canvas
 {
     -moz-box-shadow: 0 0 5px #fff;
